--- a/index.html
+++ b/index.html
@@ -258,54 +258,57 @@
             <div id="portfolio-content">
                 <div class="portfolio portfolio-first">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-first.jpg" alt="portfolio-first">
+                        <img src="images/htc-UI.png" alt="portfolio-first">
                     </div>
                     <div class="portfolio-text">
-                        <h2>App Idea</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                            expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem
-                            ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i
+                        <h2>HTC UI Clone - static (Responsive)</h2>
+                        <p>Using HTML , CSS and Java Script I created a clone of HTC's Official website website </p>
+                        <div class="button"><a href="https://abhinav9074.github.io/HTC-clone-/"><button><span class="index"> View Project<i
                                             class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
                 <div class="portfolio portfolio-second">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-second.jpg" alt="portfolio-second">
+                        <img src="images/netflix.jpg" alt="portfolio-second">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Web Designing</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id cumque placeat minima ad
-                            laudantium suscipit
-                            voluptatem ducimus. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i
+                        <h2>Netflix UI Clone - static</h2>
+                        <p>Using HTML and CSS I created a clone of NETFLIX's Official website website</p>
+                        <div class="button"><a href="https://abhinav9074.github.io/Netflix/"><button><span class="index"> View Project<i
                                             class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
 
                 <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-third.jpg" alt="portfolio-third">
+                        <img src="images/prime.jpg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
-                        <h2>UI Designing</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                            expedita eius dignissimos
-                            .. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i
+                        <h2>Prime Video UI Clone</h2>
+                        <p>Using HTML and CSS I created a clone of Amazon Prime Video's Official website website</p>
+                        <div class="button"><a href="https://abhinav9074.github.io/Amazon-Prime/"><button><span class="index"> View Project<i
                                             class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
                 <div class="portfolio portfolio-fourth">
                     <div class=" portfolio-image">
-                        <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
+                        <img src="images/sfi.png" alt="portfolio-fourth">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Wow Graphics</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                            expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem
-                            ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i
+                        <h2>SFI WMO COLLEGE OFFICIAL WEBSITE</h2>
+                        <p>This website was created for Students Federation Of India WMO College Unit</p>
+                        <div class="button"><a href="https://sfiwmoc.github.io/sfiwmoc/"><button><span class="index"> View Project<i
+                                            class="gg-arrow-right"></i></span></button></a></div>
+                    </div>
+                </div>
+                <div class="portfolio portfolio-third">
+                    <div class="portfolio-image">
+                        <img src="images/arbeiter.jpg" alt="portfolio-third">
+                    </div>
+                    <div class="portfolio-text">
+                        <h2>Worker Management System -Dynamic</h2>
+                        <p>This is a web app can be used to find nearby loacl workers and call them for our household works, This Project is created using MERN stack </p>
+                        <div class="button"><a href="https://github.com/Abhin-av-P/Arbeiter"><button><span class="index"> View Project<i
                                             class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -409,21 +412,21 @@
                             <img src="./images/icon-name.png" class="icon" alt="name-icon">
                             <div class="contact-info-icon-text">
                                 <h6>Name</h6>
-                                <p>Arlo Brown</p>
+                                <p>Abhinav P</p>
                             </div>
                         </div>
                         <div class="contect-info-content-line">
                             <img src="./images/icon-location.png" class="icon" alt="location-icon">
                             <div class="contact-info-icon-text">
                                 <h6>Location</h6>
-                                <p>New York, USA</p>
+                                <p>Calicut , Kerala , India</p>
                             </div>
                         </div>
                         <div class="contect-info-content-line">
                             <img src="./images/icon-phone.png" class="icon" alt="phone-icon">
                             <div class="contact-info-icon-text">
                                 <h6>Call</h6>
-                                <p>+9865376531</p>
+                                <p>+91 9074298275</p>
                             </div>
                         </div>
 
@@ -431,7 +434,7 @@
                             <img src="./images/icon-email.png" class="icon" alt="email-icon">
                             <div class="contact-info-icon-text">
                                 <h6>Email</h6>
-                                <p>Info@example.com</p>
+                                <p>abhinavp9074@gmail.com</p>
                             </div>
                         </div>
                     </div>
